--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
 			rgba(20, 19, 26, 0.9),
 			rgba(20, 19, 26, 0.9)
 		), */
-	background: url(./img/venom-fon.jpg) no-repeat center center;
+	background: url(../img/venom-fon.jpg) no-repeat center center;
 	background-size: cover;
 }
 .header {
@@ -105,7 +105,7 @@ body {
 	width: 15px;
 	height: 15px;
 	vertical-align: middle;
-	background-image: url(./img/arrow.svg);
+	background-image: url(../img/arrow.svg);
 }
 .venom__button-premier {
 	font-size: 14px;
@@ -120,5 +120,5 @@ body {
 	width: 15px;
 	height: 15px;
 	vertical-align: middle;
-	background-image: url(./img/ticket.png);
+	background-image: url(../img/ticket.png);
 }
